[gd_scene load_steps=23 format=3 uid="uid://fx4mgq00nc5p"]

[ext_resource type="Script" uid="uid://cuvkll4cav41p" path="res://scenes/sceinceguy/sceinceguy.gd" id="1_erwwe"]
[ext_resource type="Texture2D" uid="uid://b6ga2cg8yh1hu" path="res://assets/sceinceguy/science_guy_happy.png" id="2_erwwe"]
[ext_resource type="FontFile" uid="uid://cih6y73fncdtg" path="res://assets/fonts/Body - Quicksand Bold.ttf" id="2_y6rsw"]
[ext_resource type="Texture2D" uid="uid://bnxbqbijt6er6" path="res://assets/sceinceguy/chatbox.png" id="3_ejcc5"]
[ext_resource type="AudioStream" uid="uid://b2m2kvto74fun" path="res://assets/audio/talk/furrero1.wav" id="5_wvidu"]
[ext_resource type="AudioStream" uid="uid://dmkhp8atnqapw" path="res://assets/audio/talk/groucho1.wav" id="6_t1077"]
[ext_resource type="AudioStream" uid="uid://3gf726doo4wb" path="res://assets/audio/talk/furrero2.wav" id="6_x0bsi"]
[ext_resource type="AudioStream" uid="uid://c7nf8g7sh2a2d" path="res://assets/audio/talk/groucho2.wav" id="7_ergrr"]
[ext_resource type="AudioStream" uid="uid://j0xw66kuip84" path="res://assets/audio/talk/furrero3.wav" id="7_t84jy"]
[ext_resource type="AudioStream" uid="uid://dlm300601exy4" path="res://assets/audio/talk/groucho3.wav" id="8_08jb7"]
[ext_resource type="AudioStream" uid="uid://b40eqeyrab2dj" path="res://assets/audio/talk/furrero4.wav" id="8_tuiak"]
[ext_resource type="AudioStream" uid="uid://b3sv4mmncwtpj" path="res://assets/audio/talk/groucho4.wav" id="9_jhq3q"]
[ext_resource type="AudioStream" uid="uid://bdulpuc6a0785" path="res://assets/audio/talk/furrero5.wav" id="9_wunmh"]
[ext_resource type="AudioStream" uid="uid://6neoig5knx4" path="res://assets/audio/talk/groucho_no.wav" id="14_x0bsi"]

[sub_resource type="Gradient" id="Gradient_ejcc5"]
colors = PackedColorArray(0, 0, 0, 0.537255, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6pb4g"]
gradient = SubResource("Gradient_ejcc5")
width = 1
height = 400
fill_from = Vector2(0, 1)
fill_to = Vector2(0, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6pb4g"]
content_margin_left = 280.0
content_margin_top = 130.0
content_margin_right = 200.0
content_margin_bottom = 150.0
texture = ExtResource("3_ejcc5")
texture_margin_left = 225.0
texture_margin_top = 343.0
texture_margin_right = 150.0
texture_margin_bottom = 220.0
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Animation" id="Animation_6pb4g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ejcc5"]
resource_name = "bob_sprite"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.975, 0.975), Vector2(1, 1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y6rsw"]
_data = {
&"RESET": SubResource("Animation_6pb4g"),
&"bob_sprite": SubResource("Animation_ejcc5")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6pb4g"]
streams_count = 5
stream_0/stream = ExtResource("5_wvidu")
stream_1/stream = ExtResource("6_x0bsi")
stream_2/stream = ExtResource("7_t84jy")
stream_3/stream = ExtResource("8_tuiak")
stream_4/stream = ExtResource("9_wunmh")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_wvidu"]
streams_count = 4
stream_0/stream = ExtResource("6_t1077")
stream_1/stream = ExtResource("7_ergrr")
stream_2/stream = ExtResource("8_08jb7")
stream_3/stream = ExtResource("9_jhq3q")

[node name="Scienceguy" type="Control"]
custom_minimum_size = Vector2(600, 300)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 77.0
offset_top = -346.0
offset_right = 677.0
offset_bottom = -46.0
grow_vertical = 0
script = ExtResource("1_erwwe")

[node name="Gradient" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -267.0
offset_top = -578.0
offset_right = 1547.0
offset_bottom = 46.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
texture = SubResource("GradientTexture2D_6pb4g")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 511.0
offset_top = -151.0
offset_right = 2028.0
offset_bottom = 465.0
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(0, 308)
mouse_filter = 1
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_y6rsw")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxTexture_6pb4g")
text = "Text text text text text
Text text text text text
Text text text text text"
autowrap_mode = 2

[node name="Color" type="ColorRect" parent="Label"]
show_behind_parent = true
layout_mode = 0
offset_left = -1542.0
offset_top = 92.0
offset_right = 446.0
offset_bottom = 510.0
mouse_filter = 1
color = Color(0.843137, 0.564706, 0.556863, 1)

[node name="Cont" type="Label" parent="Label"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -589.0
offset_top = -166.0
offset_right = -116.0
offset_bottom = -78.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 1
theme_override_colors/font_color = Color(0.565026, 0.521013, 0.428828, 1)
theme_override_fonts/font = ExtResource("2_y6rsw")
theme_override_font_sizes/font_size = 48
text = "Click to continue...â–¼"

[node name="Sprite" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = -171.0
offset_top = -304.0
offset_right = 664.0
offset_bottom = 508.0
grow_vertical = 2
pivot_offset = Vector2(417.5, 556)
texture = ExtResource("2_erwwe")
expand_mode = 1

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_y6rsw")
}

[node name="VoiceFurrero" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_6pb4g")
volume_db = -15.0
bus = &"SFX"

[node name="VoicePolluto" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_wvidu")
volume_db = -15.0
bus = &"SFX"

[node name="PollutoNo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_x0bsi")
volume_db = -15.0
bus = &"SFX"

[node name="Layer" type="CanvasLayer" parent="."]

[node name="Mousetrap" type="Control" parent="Layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="gui_input" from="Layer/Mousetrap" to="." method="_on_gui_input"]
